--- a/darknet_ros/config/csresnext50.yaml
+++ b/darknet_ros/config/csresnext50.yaml
@@ -1,11 +1,11 @@
 yolo_model:
 
   config_file:
-    name: yolov3.cfg
+    name: csresnext50-panet-spp-original-optimal.cfg
   weight_file:
-    name: yolov3.weights
+    name: csresnext50-panet-spp-original-optimal_final.weights
   threshold:
-    value: 0.5
+    value: 0.3
   detection_classes:
     names:
       - person
